--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     {
       "name"    : "anonymoussc",
       "email"   : "50c5ac69@opayq.com",
-      "homepage": "https://github.com/onderdelen/client",
+      "homepage": "https://github.com/onderdelen/",
       "role"    : "Developer"
     }
   ],
