--- a/composer.json
+++ b/composer.json
@@ -41,5 +41,8 @@
       "Componeint\\Client\\Test\\": "tests"
     }
   },
-  "minimum-stability": "stable"
+  "minimum-stability": "stable",
+  "config"           : {
+    "secure-http": false
+  }
 }
